--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
         "<all_urls>"
       ],
       "js": [
+        "node_modules/jquery/dist/jquery.min.js",
         "src/content_script.js"
       ]
     }
